# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.64 2005/02/06 04:51:25 codeman Exp $

*GLI-0.01 (9 Feb 2004)

  5 Feb 2005; Preston Cody <codeman@gentoo.org>
  Changed the raising of 'warning' exceptions to a simple log of the error
  so that the installer can continue.

  3 Feb 2005; Preston Cody <codeman@gentoo.org>
  Some big changes.  First, changed most output to display_on_tty8.
  Second, added log lines to all templates.  Some smaller fixes such as typos.
  Also did some cleanups of old commented lines.

  1 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed tty8 output to a fifo. Minor GLIStorageDevice fix thanks to BenUrban.
  Undo change with fix. Escaping fix in GLIStorageDevice.py

  31 Jan 2005; Preston Cody <codeman@gentoo.org>
  more updates to TODO list.  hopefully we'll soon start removing items instead
  of adding them.

  29 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed the way GLIStorageDevice.get_max_sectors_for_resize() works

  27 Jan 2005; Preston Cody <codeman@gentoo.org>
  updated TODO list. (again)

  25 Jan 2005; Preston Cody <codeman@gentoo.org>
  changed output of portmap start to display_on_tty8.
  fixed bootloader for udev and multiple kernels
  fixed custom kernel config (again)

  22 Jan 2005; Preston Cody <codeman@gentoo.org>
  changed default value of CC._enable_ssh to True because this is smart.
  added code to allow custom kernel .config. may be unstable and break. sorry.

  21 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  partition() now waits until after it checks for partition flags before delete
  the partitions :P

  19 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Updated TODO. swapon failure it temporarily not an error. swapon is an error
  again. is_uri() check only performed on portage_tree_snapshot_uri if it isn't
  blank.

  19 Jan 2005; Preston Cody <codeman@gentoo.org>