@@ -6,12 +6,10 @@ If you are working or plan to work on a task here put your name by it.
 Things still needing to be done for the ALPHA release (on experimental livecd):
 	Backend:
 		Make sure partitioning somewhat works. (agaffney)
-		i gotta check for dhcp in the network stuff and emerge it if necessary?
+		
 		
 	DialogFE:
 		Add networking setup for CC <whisper>samyron</whisper>
-		Add functionality to handle 'warning' and 'notice' level exceptions
-		  see above^^
 		update partitioning stuff (agaffney) (sorry)
 		
 	gtkFE:
@@ -29,3 +27,4 @@ Fix bootloader code for udev. (codeman)
 Add rest of add_users and fix overwriting user info bug (codeman and agaffney)
 Switch most outputs to tty8 (codeman)
 custom kernel and kernel bootsplash options. (codeman)
+i gotta check for dhcp in the network stuff and emerge it if it is? (codeman)
