@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.64 2005/02/06 04:51:25 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.65 2005/02/06 07:37:54 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  6 Feb 2005; Preston Cody <codeman@gentoo.org>
+  check for dhcp in the network stuff and emerge it if it is
 
   5 Feb 2005; Preston Cody <codeman@gentoo.org>
   Changed the raising of 'warning' exceptions to a simple log of the error
